[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Faisal Rasool <faisal.rasool@hotmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
